;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.3.9:
  * enhancement: The compiler now allows stack allocating vectors of any size
    on all safety levels, not just those which it can prove are of sub-page
    sizes. It can do this because it now inserts code to check for stack
    overflow explicitly on higher safety levels.

changes in sbcl-2.3.9 relative to sbcl-2.3.8:
  * enhancement: stack allocation via DYNAMIC-EXTENT now applies to all values
    that a variable can take on (for example via SETQ), not just the initial
    binding. This permits for example building complex or recursive structures
    on the stack more easily via iteration. See the updated manual entry for
    more details.
  * minor incompatible change: some interfaces in the SB-POSIX contrib module
    adhere to the spec that a NULL result from the C library is an error if
    and only if errno was altered by the call. SYSCALL-ERROR will be signaled
    if so.
  * enhancement: the SB-POSIX contrib module provides DO-PASSWDS and DO-GROUPS
    to allow users to iterate over password and group databases safely.
  * platform support:
    ** support for Darwin on x86 and PowerPC has been restored.  (lp#2033287,
       thanks to Kirill A. Korinsky, Sergey Fedorov and barracuda156)
  * bug fix: miscompilation due to erroneous type derivation in the presence
    of multiplication of fixnums by ratios.  (lp#2033695, reported by Patrick
    Dussud)
  * bug fix: compiler error when compiling signed- and unsigned 64-bit type
    checks in some cases.  (lp#2033997, reported by Eric Smith)
  * bug fix: compiler error when the :INITIAL-CONTENTS argument to MAKE-ARRAY
    is a constant non-sequence.  (lp#2037328)
  * bug fix: compiler error when constant-folding sequence functions with
    :TEST or :KEY functions erroring on the given sequence.  (lp#2037341)
  * bug fix: compiler error when arguments to array or sequence functions